--- a/css/style.css
+++ b/css/style.css
@@ -401,7 +401,7 @@ p, body, button {
 
 .about-image {
   width: 100%;
-  height: 354px;
+  /* height: 354px; */
   object-fit: cover;
   border-radius: 4px;
 }
@@ -514,7 +514,6 @@ p, body, button {
   border-top: 1px solid var(--border-light);
 }
 
-/* Media Queries for Responsive Design */
 @media (min-width: 768px) {
   /* Container adjustments for tablet */
   .container {
@@ -612,7 +611,7 @@ p, body, button {
     height: 400px;
   }
   
-  /* Testimonials in 2 columns */
+  /* Testimonials in 8 columns */
   .testimonials-content {
     max-width: 700px;
   }
@@ -757,7 +756,8 @@ p, body, button {
   }
   
   .about-image {
-    height: 500px;
+    width: 100%;
+    height: auto;
   }
   
   /* Testimonials in 3 columns */
