--- a/css/style.css
+++ b/css/style.css
@@ -113,6 +113,8 @@ p, body, button {
 }
 
 .btn-small {
+  margin: auto;
+  width: 80%;
   padding: 4px 20px;
   font-size: var(--font-size-body);
 }
@@ -200,7 +202,6 @@ p, body, button {
 
 .nav-container {
   width: 100%;
-  max-width: 357px;
   display: grid;
   grid-template-columns: 1fr auto;
   align-items: center;
@@ -729,7 +730,7 @@ p, body, button {
   /* Offer cards in 3 columns */
  .offer-cards {
    display: grid;
-   grid-template-columns: repeat(3, 1fr);
+   grid-template-columns: repeat(12, 1fr);
    grid-template-rows: auto;
    gap: 80px;
    max-width: 1000px;
@@ -738,17 +739,17 @@ p, body, button {
  }
 
  .offer-card:nth-child(1){
-   grid-column: 1;
+   grid-column: span 4;
    grid-row: 1;
  }
 
  .offer-card:nth-child(2){
-   grid-column: 2;
+   grid-column: span 4;
    grid-row: 1;
  }
 
  .offer-card:nth-child(3){
-   grid-column: 3;
+   grid-column: span 4;
    grid-row: 1;
  }
 
@@ -780,22 +781,22 @@ p, body, button {
 /* container */
 .testimonial-cards {
   display: grid;
-  grid-template-columns: repeat(3, 1fr);
+  grid-template-columns: repeat(12, 1fr);
   grid-template-rows: auto;}
 
 /* individual cards */
 .testimonial-card:nth-child(1){
-  grid-column: 1;
+  grid-column: span 4;
   grid-row: 1;
 }
 
 .testimonial-card:nth-child(2){
-  grid-column: 2;
+  grid-column: span 4;
   grid-row: 1;
 }
 
 .testimonial-card:nth-child(3){
-  grid-column: 3;
+  grid-column: span 4;
   grid-row: 1;
 }
   
